@@ -2,7 +2,7 @@
 #  Makefile for GXemul src/components/dummy
 #
 
-CXXFLAGS=$(CXXWARNINGS) $(COPTIM) $(CPEDANTIC) $(INCLUDE2)
+CXXFLAGS=$(CWARNINGS) $(COPTIM) $(CPEDANTIC) $(INCLUDE2)
 LIBS=$(OTHERLIBS)
 
 OBJS=DummyComponent.o
